# rdp-license-monitor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
docs/examples/: servers.yml.example
scripts/powershell/: Get-RDLicenses.ps1
src/rdp_license_monitor/: __init__.py  __main__.py  cli.py  config.py
src/rdp_license_monitor/collectors/: base.py  issued_licenses.py  license_packs.py  role_check.py
src/rdp_license_monitor/core/: connection.py  exceptions.py  models.py
src/rdp_license_monitor/reporters/: console.py  csv_exporter.py  html_reporter.py  json_exporter.py
src/rdp_license_monitor/templates/: report.html.j2
src/rdp_license_monitor/utils/: logging.py
tests/: conftest.py  test_cli.py  test_collectors.py  test_config.py  test_exporters.py  test_models.py
tests/fixtures/: wmi_samples.json
