[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rdp-license-monitor"
version = "0.1.0"
description = "CLI para auditar licencias de Remote Desktop Services en Windows Server"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "David Cabrera", email = "soydavidcabrera@gmail.com" }]
keywords = ["rds", "windows-server", "licensing", "audit", "sysadmin"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
]

dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "pypsrp>=0.8",
  "pyyaml>=6.0",
  "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "bandit>=1.7",
  "pip-audit>=2.7",
  "pre-commit>=3.7",
]

[project.scripts]
rdp-license-monitor = "rdp_license_monitor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/rdp_license_monitor"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "S", "A", "UP"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
